tests/PrototypeParseError.jg.out
PrototypeParseError.jg:3:19: Unexpected ','
