tests/PrototypeParseError.jg


TestMixin2 < Blarg, Blarg { # Not allowed
}
